[package]
name = "mnt"
version = "0.2.0"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Parse mount points"
repository = "https://github.com/stemjail/mnt-rs"
readme = "README.md"
keywords = ["linux", "mount", "parse", "fstab"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[dependencies]
libc = "0.2.*"
